--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/qs": "^6.9.16",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "postcss": "^8.4.47",
+    "qs": "^6.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
