--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.1",
+    "@mui/x-date-pickers": "^7.19.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/qs": "^6.9.16",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "postcss": "^8.4.47",
     "qs": "^6.13.0",
     "react": "^18.3.1",
@@ -25,7 +30,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "redux": "^5.0.1",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^3.4.13",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
