--- a/daymanagement/package.json
+++ b/daymanagement/package.json
@@ -34,6 +34,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
+    "react-pdf": "^10.0.1",
     "react-redux": "^9.2.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
