--- a/daymanagement/package.json
+++ b/daymanagement/package.json
@@ -16,15 +16,19 @@
     "@mui/material": "^6.1.7",
     "@mui/x-date-pickers": "^7.22.2",
     "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@reduxjs/toolkit": "^2.5.1",
+    "add": "^2.0.6",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "drawer": "^0.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.503.0",
     "moment": "^2.30.1",
@@ -36,8 +40,10 @@
     "react-hook-form": "^7.53.2",
     "react-pdf": "^10.0.1",
     "react-redux": "^9.2.0",
+    "shadcn": "^3.5.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "zod": "^3.24.1",
     "zustand": "^5.0.1"
   },
