--- a/daymanagement/package.json
+++ b/daymanagement/package.json
@@ -35,7 +35,7 @@
     "next": "15.0.3",
     "qs": "^6.14.0",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^9.11.3",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
     "react-pdf": "^10.0.1",
