--- a/daymanagement/package.json
+++ b/daymanagement/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.503.0",
     "moment": "^2.30.1",
+    "motion": "^12.23.25",
     "next": "15.0.3",
     "qs": "^6.14.0",
     "react": "19.0.0-rc-66855b96-20241106",
