--- a/daymanagement/.prettierrc
+++ b/daymanagement/.prettierrc
@@ -1,7 +1,7 @@
 {
-    "trailingComma": "none",
-    "tabWidth": 4,
-    "semi": true,
-    "singleQuote": true,
-    "jsxSingleQuote": true
+  "singleQuote": false,
+  "semi": true,
+  "trailingComma": "es5",
+  "printWidth": 80,
+  "tabWidth": 2
 }
